# Localization-Planning-Control-Pipeline

Localization-Planning-Control/: .gitignore  README.md
Localization-Planning-Control/src/Localization/src/: localization.cpp
Localization-Planning-Control/src/Planning_module/: planning.cpp
Localization-Planning-Control/src/deep_orange_msgs/msg/: CtReport.msg  JoystickCommand.msg
Localization-Planning-Control/src/long_control/config/: params.yaml
Localization-Planning-Control/src/long_control/include/: deccel_stop.hpp  long_control.hpp
Localization-Planning-Control/src/long_control/src/: long_control_node.cpp
Localization-Planning-Control/src/onboarding_launch/launch/: launch.py
Localization-Planning-Control/src/raptor_dbw_msgs/msg/: BrakeCmd.msg  DashSwitch.msg  SteeringReport.msg  SteeringReportExtd3.msg
bharath_onboarding-main/map/: lvms_center_min_curve.csv  monza_mincurv.csv
bharath_onboarding-main/src/kin_control/: CMakeLists.txt  package.xml
bharath_onboarding-main/src/kin_control/config/: params.yaml
bharath_onboarding-main/src/kin_control/include/: kin_control.hpp
bharath_onboarding-main/src/kin_control/src/: kin_control_node.cpp
bharath_onboarding-main/src/long_control/: CMakeLists.txt  package.xml
bharath_onboarding-main/src/onboarding_launch/: CMakeLists.txt  package.xml
bharath_onboarding-main/src/raptor_dbw_msgs/: CMakeLists.txt
bharath_onboarding-main/src/raptor_dbw_msgs/msg/: BrakePressureReport.msg  BrakeReportExtd.msg  BrakeReportExtd2.msg  SteeringCmd.msg  SteeringReportExtd.msg  SteeringReportExtd2.msg
